# iroha

./: .gitmodules  README.md  circle.yml  fabfile.py
core/consensus/: CMakeLists.txt  consensus_event.cpp  consensus_event.hpp  event.hpp  sumeragi.cpp  sumeragi.hpp
core/consensus/connection/: connection.hpp
core/infra/: CMakeLists.txt
core/infra/connection/: connection_with_aeron.cpp
core/infra/crypto/: hash.cpp
core/infra/repository/: world_state_repository_with_level_db.cpp
core/infra/server/: http_server_with_cappuccino.cpp
core/infra/service/: peer_service_with_json.cpp
core/model/: transaction.hpp
core/model/commands/: transfer.cpp  transfer.hpp
core/repository/: world_state_repository.hpp
core/repository/consensus/: merkle_transaction_repository.cpp  transaction_repository.cpp  transaction_repository.hpp
core/repository/domain/: account_repository.hpp
core/util/: assert.hpp  string_util.hpp  use_optional.hpp
docs/: dev_environment.rst  index.rst  iroha_whitepaper.md
iroha.xcworkspace/xcuserdata/makoto.xcuserdatad/: UserInterfaceState.xcuserstate
peer/: run.sh
smart_contract/: CMakeLists.txt  JNITest.java  java.policy.txt
smart_contract/JavaExecuteTest/: JavaExecuteTest.java  run.sh
smart_contract/repository/: account_repository_jni.cpp
test/connection/: CMakeLists.txt
test/consensus/: sumeragi_test.cpp  transaction_test.cpp
test/crypto/: hash_test.cpp
test/infra/connection/: aeron_test.cpp
test/smart_contract/: CMakeLists.txt  java_execute_test.cpp  java_jni_test.cpp
(+3 files in other folders)
